Profile/manifests/profiledeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
      - name: profile
        image: romeo7/trim_profile:v1
        ports:
        - containerPort: 5000
