Profile/manifests/profileservice.yaml
kind: Service
apiVersion: v1
metadata:
  name:  profile
spec:
  selector:
    app:  profile
  type:  ClusterIP
  ports:
  - name:  profile-port
    port:  5001
    targetPort:  5000
