Profile/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  profile
spec:
  selector:
    app:  profile
  type:  ClusterIP
  ports:
  - port:  8000
    targetPort:  8000
    protocol: TCP
